# docs/api/voidengine/swagger.json
@@ -1,4 +1,10 @@
 {
+    "consumes": [
+        "application/json"
+    ],
+    "produces": [
+        "application/json"
+    ],
     "swagger": "2.0",
     "info": {
         "description": "这里写描述信息",
@@ -53,6 +59,13 @@
                 ],
                 "parameters": [
                     {
+                        "type": "string",
+                        "default": "zh",
+                        "description": "Language",
+                        "name": "Accept-Language",
+                        "in": "header"
+                    },
+                    {
                         "maxLength": 4,
                         "type": "string",
                         "example": "desc",
@@ -106,6 +119,13 @@
                 ],
                 "parameters": [
                     {
+                        "type": "string",
+                        "default": "zh",
+                        "description": "Language",
+                        "name": "Accept-Language",
+                        "in": "header"
+                    },
+                    {
                         "description": "modify user param",
                         "name": "user",
                         "in": "body",
@@ -143,6 +163,13 @@
                 ],
                 "parameters": [
                     {
+                        "type": "string",
+                        "default": "zh",
+                        "description": "Language",
+                        "name": "Accept-Language",
+                        "in": "header"
+                    },
+                    {
                         "description": "add user param",
                         "name": "user",
                         "in": "body",
@@ -179,6 +206,13 @@
                     "User"
                 ],
                 "parameters": [
+                    {
+                        "type": "string",
+                        "default": "zh",
+                        "description": "Language",
+                        "name": "Accept-Language",
+                        "in": "header"
+                    },
                     {
                         "description": "delete user param",
                         "name": "user",
@@ -271,6 +305,13 @@
                     "type": "string"
                 }
             }
+        }
+    },
+    "securityDefinitions": {
+        "ApiKeyAuth": {
+            "type": "apiKey",
+            "name": "Authorization",
+            "in": "header"
         }
     }
 }
